--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -7,7 +7,10 @@
 
     <section>
 
-        @fragments.layout.sectionHeader("Become a member")
+    	<header class="section__heading u-cf">
+    	    <h1 class="section-headline section-headline--no-border">Become a member</h1>
+    	</header>
+    	<div class="">Join as a founding Partner or Patron and the price you pay today will never rise</div>
 
         <div class="package-list">
             @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=true, mode="promo")
