fixed issue with benefit alignments

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         
-        <div class="package__outer hidden-mobile u-cf js-select-tier">
+        <div class="package__outer hidden-mobile js-select-tier">
             <div class="package__inner">
                 @fragments.tier.details(currentTier=tier, showBenefitDetails=showBenefitDetails, showBenefitCopy=showBenefitCopy)
             </div>
