--- a/frontend/app/views/fragments/social.scala.html
+++ b/frontend/app/views/fragments/social.scala.html
@@ -1,11 +1,10 @@
 @(social: views.support.Social, colourSprites: Boolean = false)
 
 @import configuration.Config
-@import play.utils.UriEncoding.encodePathSegment
 
     <ul class="social u-unstyled u-cf">
         <li class="social__item">
-            <a class="social__action" href="mailto:?subject=@encodePathSegment(social.emailSubject, "utf-8")&amp;body=@encodePathSegment(social.emailMessage, "utf-8")">
+            <a class="social__action" href="mailto:?subject=@social.encodedEmailSubject&amp;body=@social.encodedEmailMessage">
                 <span class="u-h">Share via Email</span>
                 <span class="social-icon @if(colourSprites){social-icon--colour}">
                     <i class="icon-sprite icon-sprite-share-email@if(colourSprites){-colour}"></i>
@@ -13,7 +12,7 @@
             </a>
         </li>
         <li class="social__item">
-            <a class="social__action" href="https://www.facebook.com/sharer/sharer.php?u=@encodePathSegment(social.facebookUrl, "utf-8")">
+            <a class="social__action" href="https://www.facebook.com/sharer/sharer.php?u=@social.encodedFacebookUrl">
                 <span class="u-h">Share on Facebook</span>
                 <span class="social-icon @if(colourSprites){social-icon--colour}">
                     <i class="icon-sprite icon-sprite-share-facebook@if(colourSprites){-colour}"></i>
@@ -21,7 +20,7 @@
             </a>
         </li>
         <li class="social__item">
-            <a class="social__action" href="https://twitter.com/intent/tweet?text=@encodePathSegment(social.twitterMessage, "utf-8")&amp;related=@Config.twitterUsername">
+            <a class="social__action" href="https://twitter.com/intent/tweet?text=@social.encodedTwitterMessage&amp;related=@Config.twitterUsername">
                 <span class="u-h">Share on Twitter</span>
                 <span class="social-icon @if(colourSprites){social-icon--colour}">
                     <i class="icon-sprite icon-sprite-share-twitter@if(colourSprites){-colour}"></i>
