Fix server error on Event pages where no ticket sale_start set [#MEM-496]
The EventBrite API doesn't return sales_start if the user hasn't explicitly
set it - though it's really not very easy to see this from the EventBrite
admin console.

We were crash out on Event Details pages where the sales_start wasn't set,
because the advance ticket sales code was expecting it. Now fall back to
Event 'created' date as the effective sales_start if no sales start
present.

https://jira.gutools.co.uk/browse/MEM-496

https://developer.eventbrite.com/docs/event-object/

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -29,7 +29,7 @@
 }
 
 @becomeMemberCta(ticket: EBTickets) = @{
-    val ticketSaleDates = model.TicketSaleDates.datesFor(event.start, ticket)
+    val ticketSaleDates = model.TicketSaleDates.datesFor(event, ticket)
     val friendSaleStartDate = ticketSaleDates.get(Tier.Friend).get
 
     if(friendSaleStartDate > Instant.now) {
@@ -42,7 +42,7 @@
 }
 
 @ticketBookingDates(ticket: EBTickets) = {
-    @defining(model.TicketSaleDates.datesFor(event.start, ticket)) { ticketSaleDates =>
+    @defining(model.TicketSaleDates.datesFor(event, ticket)) { ticketSaleDates =>
         
         @for((tier, salesDate) <- ticketSaleDates) {
             <ul class="sale-dates__list u-unstyled u-cf">
