Use named arguments for social fragment

--- a/frontend/app/views/fragments/joiner/completePurchase.scala.html
+++ b/frontend/app/views/fragments/joiner/completePurchase.scala.html
@@ -18,7 +18,7 @@
 } else {
     <section class="content__container content__container--slim">
         <h2 class="content__headline">Tell your friends</h2>
-        @fragments.social(joinThankyou, true)
+        @fragments.social(joinThankyou, colourSprites=true)
     </section>
     <section class="content__container content__container--slim">
         <h2 class="content__headline">Find Guardian Live events</h2>
