--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -10,7 +10,7 @@
     	<header class="section__heading u-cf">
     	    <h1 class="section-headline section-headline--no-border">Become a member</h1>
     	</header>
-    	<div class="">Join as a founding Partner or Patron and the price you pay today will never rise</div>
+    	<div class="section-intro">Join as a founding Partner or Patron and the price you pay today will never rise</div>
 
         <div class="package-list">
             @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=true, mode="promo")
