Add share buttons to Event confirmation page

--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -3,6 +3,7 @@
 @import configuration.Config
 @import views.support.Dates._
 @import views.support.Prices._
+@import views.support.Social.eventThankyou
 
 @main("Event Thankyou - " + event.name.text + " (" + event.id + ")") {
 
@@ -56,6 +57,11 @@
     <section class="content__container content__container--slim">
         <h2 class="content__headline">Before the event</h2>
         <p>Read related articles and what other members have to say at <a href="@Config.guardianMembershipUrl">theguardian.com/membership</a>. You'll also see all the latest news, highlights and ideas from our membership community.</p>
+    </section>
+
+    <section class="content__container content__container--slim">
+        <h2 class="content__headline">Tell your friends</h2>
+        @fragments.social(eventThankyou(event), colourSprites=true)
     </section>
 
     <section class="content__container content__container--slim">
