Make all our CSS load everywhere (not just screens)

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -41,7 +41,7 @@
         <title>@(Config.siteTitle + " - " + title)</title>
         @fragments.javaScriptFirstSteps()
 
-        <link rel="stylesheet" media="screen" href="@Asset.at("stylesheets/style.css")">
+        <link rel="stylesheet" media="all" href="@Asset.at("stylesheets/style.css")">
 
         @*
             TODO: Stop IE9 getting the stylesheet twice.
