We should let our CSS do things like case manipulation

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -56,7 +56,7 @@
     <div class="event-header">
         <div class="event-header__container">
             <div class="event-masthead u-cf">
-                <div class="event-masthead__title section-header page-header">events</div>
+                <div class="event-masthead__title section-header page-header case--lower">Events</div>
                 <h1 class="event-masthead__name">@event.name.text</h1>
             </div>
         </div>
