Hide page elements for print media

--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -1,6 +1,6 @@
 @import org.joda.time.DateTime
 @import configuration.Config
-<footer class="l-footer u-cf" data-link-name="footer" data-component="footer">
+<footer class="l-footer u-cf hidden-print" data-link-name="footer" data-component="footer">
     <div class="l-footer__primary">
         <div id="footer-nav" class="gs-container">
             <div class="brand-bar u-cf">
