--- a/frontend/app/views/fragments/unsupportedBrowser.scala.html
+++ b/frontend/app/views/fragments/unsupportedBrowser.scala.html
@@ -1,6 +1,6 @@
 @import views.support.Asset
 
-<div class="browser-upgrade-msg">
+<div class="browser-upgrade-msg hidden-print">
     <img src="@Asset.at("images/logo-plain.png")" class="browser-upgrade-msg__logo" />
     <div class="browser-upgrade-msg__box">
         <h3 class="browser-upgrade-msg__header">Sorry, your browser is not supported</h3>
