--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -47,7 +47,7 @@
         <p>Read related articles and what other members have to say at <a href="@(Config.guardianMembershipUrl)">theguardian.com/membership</a>. You'll also see all the latest news, highlights and ideas from our membership community.</p>
     </section>
 
-    <section class="content__container content__container--slim">
+    <section class="content__container content__container--slim hidden-print">
         <h2 class="content__headline">Find more Guardian Live events</h2>
         <a class="action" href="/events">See all events</a>
     </section>
