--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -2,7 +2,7 @@
 
 @import configuration.Config
 
-<header class="header" role="banner">
+<header class="header hidden-print" role="banner">
     <div class="js-warning">
         <p>Please enable JavaScript &ndash; we use it to enhance behaviour for Guardian Membership. <a href="http://www.enable-javascript.com/">Click here for instructions to do so in your browser</a>.</p>
     </div>
