--- a/frontend/assets/stylesheets/utility/_hidden.scss
+++ b/frontend/assets/stylesheets/utility/_hidden.scss
@@ -14,22 +14,13 @@
  * User state
  */
 
-.id--signed-out .sign-in-required {
-    display: none;
-}
-
-.id--signed-in .sign-in-hidden {
-    display: none !important;
-}
-
-.tier-required {
+.id--signed-out .sign-in-required,
+.id--signed-in .sign-in-hidden,
+.tier-required,
+.member--has-tier .tier-hidden {
     display: none !important;
 }
 
 .member--has-tier .tier-required {
     display: block !important;
-}
-
-.member--has-tier .tier-hidden {
-    display: none !important;
 }
