--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -25,3 +25,7 @@
    Webfonts pages
    ========================================================================== */
 @import 'webfonts';
+
+// finally import print-only styles
+// (currently only used for event thankyou pages)
+@import 'print';
