Better advance ticket sale dates (day+ distinctions)
After conversation with the Guardian Live Events team about how they've had
set the ticket-sale-start just to get round short lead times, we've agreed
with Dale to adjust the rules to cope better with those situations.

Regarding the test event data from PROD, you can grab a data file using the
same query as the site:

$ curl "https://www.eventbriteapi.com/v3/users/me/owned_events/?token=XXXX&page=1"

(Note that this gives full pagination info, unlike the /v3/events call
I was using for test data before - panic over)


These are the original requirements from Dale's email - note that only
the rules that support 1-day-or-greater distinction between tiers are
currently implemented, because we need to tweak the UI to display *times*
as well as dates when the distinction is less.

---------- Forwarded message ----------
From: Dale Kirsop <dale.kirsop@theguardian.com>
Date: 22 October 2014 18:51
Subject: Re: Membership Ticket Sale Dates (causing errors) - and advance purchase for Patrons & Partners
To: Roberto Tyley <roberto.tyley@theguardian.com>
Cc: Natalie Scriven <natalie.scriven@theguardian.com>, Michael Harris <michael.harris@guardian.co.uk>, Madeleine Williams <madeleine.williams@theguardian.com>, Membership Dev <membership.dev@guardian.co.uk>

...

less that 4 hours lead time: everybody gets tickets immediately from ticket-sale-start
4+ hours - 48 hours lead time : Patron gets 30 minute lead, Partner gets 20 minute lead = 30 mins before general release
48 hours - 7 days lead time : Patron gets 4 hour lead, Partner gets 2 hour lead = 4 hours before general release
7 days - 2 weeks lead time : Patron gets 2 day lead, Partner gets 1 day lead = 2 days before general release
2 weeks - 6 weeks lead time: Patron gets 5 day lead, Partner gets 3 day lead = 5 days before general release
6+ weeks lead time : Patron gets 2 week lead, Partner gets 1 week lead = 2 week lead

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -31,7 +31,7 @@
 
 @becomeMemberCta(ticket: EBTickets) = @{
     val ticketSaleDates = model.TicketSaleDates.datesFor(event, ticket)
-    val friendSaleStartDate = ticketSaleDates.get(Tier.Friend).get
+    val friendSaleStartDate = ticketSaleDates.datesByTier(Tier.Friend)
 
     if(friendSaleStartDate > Instant.now) {
         Html("<div><a class='action js-member-cta' href='/join'>Become a member</a></div>")
@@ -44,9 +44,9 @@
 
 @ticketBookingDates(ticket: EBTickets) = {
     @defining(model.TicketSaleDates.datesFor(event, ticket)) { ticketSaleDates =>
-        @for((tier, salesDate) <- ticketSaleDates) {
+        @for(tier <- Seq(Tier.Patron, Tier.Partner, Tier.Friend)) {
             <ul class="sale-dates__list u-unstyled u-cf">
-                <li class="sale-dates__item"><span class="sale-dates__item--left">@(tier + "s")</span> @dateOrNow(tier, salesDate)</li>
+                <li class="sale-dates__item"><span class="sale-dates__item--left">@(tier + "s")</span> @dateOrNow(tier, ticketSaleDates.datesByTier(tier))</li>
             </ul>
         }
     }
