--- a/frontend/assets/stylesheets/layout/_headings.scss
+++ b/frontend/assets/stylesheets/layout/_headings.scss
@@ -26,6 +26,14 @@
     margin-bottom: 0;
 }
 
+.section-headline--padding-left {
+    border-top: 0;
+    
+    @include mq(tablet) {
+        padding-left: rem(gs-span(2) + $gs-gutter * 3);
+    }
+}
+
 .section-intro {
     @include fs-bodyCopy(2);
 
