Fix for the missing Event Venue addresses
@marchibbins spotted that it looks like EventBrite have renamed the
'location' field in their API to 'address':

https://developer.eventbrite.com/docs/venue-object/

Had to disable some tests because of insufficient corresponding event data.
Don't feel too bad about this as the mapping of eventbrite state concepts
to our is done in a fairly crazy way which can be massively simplified
anyway.

--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -29,7 +29,7 @@
                     @for(name <- event.venue.name) {
                         <span class="event-item__location-name">@name</span>
                     }
-                    @for(location <- event.venue.location) {
+                    @for(location <- event.venue.address) {
                         <span class="event-item__location-detail">@location.address_1 </span>
                         <span class="event-item__location-detail">@location.city @location.postal_code </span>
                     }
