--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -24,7 +24,7 @@
                         @if(event.venue.name){
                             <span class="event-item__location-name">@event.venue.name</span>
                         }
-                        @for(location <- event.venue.location) {
+                        @for(location <- event.venue.address) {
                             @if(location.city) {
                                 <span class="event-item__location-address">, @location.city, @location.postal_code</span>
                             }
