--- a/frontend/app/views/fragments/event/itemSummary.scala.html
+++ b/frontend/app/views/fragments/event/itemSummary.scala.html
@@ -25,7 +25,7 @@
             @if(event.venue.name){
                 <span class="event-item__location-name">@event.venue.name </span>
             }
-            @for(location <- event.venue.location) {
+            @for(location <- event.venue.address) {
                 <span class="event-item__location-detail">@location.address_1 </span>
                 <span class="event-item__location-detail">@location.city @location.postal_code </span>
             }
